@@ -2,6 +2,8 @@ UNRELEASED
   * More tests added
   * Fix confusing error message with -g and IPv6 addresses (#58, reported by Axel Beckert)
   * Allow option '-f' also for non-root (since setuid privileges are dropped)
+  * Remove support for NIS groups
+  * Do not retry twice DNS lookup on DNS lookup problem
 
 2014-03-08  David Schweikert  <david@schweikert.ch>
   * Version 3.9
